<resources>
    <string name="app_name">Food Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bask_managment_online_inventory">Bask Managment Online Inventory</string>
    <string name="baskt_toolbar">Baskt</string>
    <string name="subtitute_products">Subtitute Products</string>
    <string name="recent_shelfs">Recent Shelf</string>
    <string name="total_items">Total Items:</string>
    <string-array name="conditionArray">
        <item>Select Type</item>
        <item>Stock</item>
        <item>Dinged</item>
        <item>BBB</item>

    </string-array>
    <string name="restock">Restock</string>
    <string name="pin_code">Pin code</string>
    <string name="verify_pin">Verify Pin</string>
    <string name="default_notification_channel_name">general</string>

    <string name="no_internet">Make sure your device is connected to the internet.</string>
    <string name="yes_internet">Internet connected</string>
    <string name="title_activity_maps">Map</string>
    <string name="pay">Pay</string>
    <string name="month">Month</string>
    <string name="cvc">Cvc</string>
    <string name="expiry">Expiry</string>
    <string name="year">Year</string>
    <string name="card_number">Card Number</string>
    <string name="full_name">Full name</string>

</resources>
