<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.PaymentActivity">

    <include layout="@layout/tool_bar"
        android:id="@+id/toolBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/toolBar"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:padding="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullNamePayment"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@color/colorAccent"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:padding="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardNumber"
                android:layout_margin="20dp"
                android:layout_marginTop="-5dp"
                android:maxLength="19"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@color/colorAccent"
                android:hint="0000-0000-0000-0000"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="5dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:text="@string/cvc"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textStyle="bold"

                    android:padding="5dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:padding="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_21">
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:id="@+id/cvc"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorAccent"
                    android:hint="000"
                    android:maxLength="3"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="5dp"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/month"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorAccent"
                        android:hint="@string/month"
                        android:maxLength="2"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingBottom="5dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="5dp"
                        />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/year"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorAccent"
                        android:hint="@string/year"
                        android:maxLength="4"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingBottom="5dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="5dp"
                        />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/payBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/dimen_21"
                android:background="@drawable/login_btn_bg"
                android:gravity="center"
                android:padding="10dp"
                android:fontFamily="@font/avenir_medium"
                android:textSize="16sp"
                android:text="@string/pay"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicatorColor="@color/colorAccent"
        app:indicatorName="BallPulseIndicator" />

</RelativeLayout>